--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <h1>PitchCS</h1>
 
 <ul class="C1">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">About</a></li>
+  <li><a href="#">Log In</a></li>
+  <li><a href="#">Sign In</a></li>
   <li><a href="#">Social</a></li>
 </ul>
   
