--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div Class="Features">
   <div Class="Feature-innter">
     <Div Class="Item">
-      <h1>Drinks, Coca</h1>
+      <h1>Drinks</h1>
      <p> Refresh your day with the timeless, fizzy goodness of Classic Cola. A perfect balance of sweetness and carbonation, this all-time favorite offers a burst of energy with every sip. Whether it's for a quick pick-me-up or to accompany your meal, Classic Cola is always a great choice.</p>
     </Div>
  <h1>Snacks, Potato Chips</h1>
