--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 <div Class="Features">
   <div Class="Feature-innter">
     <Div Class="Item">
-      <h1>Drinks</h1>
-     <p> Refresh your day with the timeless, fizzy goodness of Classic Cola. A perfect balance of sweetness and carbonation, this all-time favorite offers a burst of energy with every sip. Whether it's for a quick pick-me-up or to accompany your meal, Classic Cola is always a great choice.</p>
-    </Div>
- <h1>Snacks, Potato Chips</h1>
-   <p>Crispy, salty, and oh-so-satisfying! Our Crunchy Potato Chips are made from real potatoes and cooked to perfection for that golden crunch in every bite. A timeless snack that’s perfect for any craving.</p>
+       <h1>View Product Avalibility.</h1>
+     <p>By signing up for a free PitchCS account, you'll gain access to real-time product availability, allowing you to check what’s in stock or sold out before visiting the vending machine. This feature ensures you always know exactly what snacks and drinks are available, saving you time and preventing disappointment. <b>Sign up today</b> to stay updated on your favorite products!.</p>
+<h1>Earn Points.</h1>
+    <P>Start earning points with every purchase you make. The more you buy, the more points you accumulate, which can be redeemed for discounts on future products or even free items. You’ll also be able to track your points in real-time, making it easy to see how close you are to your next reward. Start saving with every snack!</P>
   </div>
 </div>
 </body>
