--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <div class="header">
-   <h1 class="animate__shakeX">PitchCS</h1>
+   <h1>PitchCS</h1>
 
 <ul class="C1">
   <li><a href="#">Log In</a></li>
@@ -27,6 +27,8 @@
  <div Class="C2-inner">
    <h1>Welcome To The PitchWeb ! !</h1>
     <p>We’re excited to have you here. At PitchCS, we aim to make your experience convenient, providing quick access to your favorite products right on campus. Whether you're grabbing a snack, refreshing with a drink, or simply looking for a break, our vending machines are here for you.</p>
+   
+   
 <a href="#" Class="Button">Learn More</a>
  </div>
 </div>
@@ -34,11 +36,11 @@
 <div Class="Features">
   <div Class="Feature-innter">
     <Div Class="Item">
-       <h1>View Product Avalibility.</h1>
+       <h1 class="animate__shakeX">View Product Avalibility.</h1>
      <p>By signing up for a free PitchCS account, you'll gain access to real-time product availability, allowing you to check what’s in stock or sold out before visiting the vending machine. This feature ensures you always know exactly what snacks and drinks are available, saving you time and preventing disappointment. <b>Sign up today</b> to stay updated on your favorite products!.</p>
-<h1>Earn Points.</h1>
+<h1 class="animate__shakeX">Earn Points.</h1>
     <P>Start earning points with every purchase you make. The more you buy, the more points you accumulate, which can be redeemed for discounts on future products or even free items. You’ll also be able to track your points in real-time, making it easy to see how close you are to your next reward. Start saving with every snack!</P>
-        <h1>Events.</h1>
+        <h1 class="animate__shakeX">Events.</h1>
         <p>PitchCS will be hosting exciting events where you, as a participating student, could be selected for one of our fun challenges! Join in the excitement and stand a chance to win fantastic prizes while enjoying great snacks. Stay tuned for event announcements and get ready to showcase your skills for a shot at winning!</p>
   </div>
 </div>
