--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     <P>Start earning points with every purchase you make. The more you buy, the more points you accumulate, which can be redeemed for discounts on future products or even free items. You’ll also be able to track your points in real-time, making it easy to see how close you are to your next reward. Start saving with every snack!</P>
         <h1 class="animate__shakeX">Events.</h1>
         <p>PitchCS will be hosting exciting events where you, as a participating student, could be selected for one of our fun challenges! Join in the excitement and stand a chance to win fantastic prizes while enjoying great snacks. Stay tuned for event announcements and get ready to showcase your skills for a shot at winning!</p>
-  </div>
+  <div class="SnackDashboard">
+  <div class="SnackDashboard-inner">
+    <h1 class="animate__flip">Snack Dashboard</h1> <!-- Added animate__flip class here -->
+    <p> P1 </p>
+    <p> P2 </p>
+    </div>
 </div>
 </body>
 </html>
