--- a/index.html
+++ b/index.html
@@ -33,21 +33,29 @@
  </div>
 </div>
 
-<div Class="Features">
-  <div Class="Feature-innter">
-    <Div Class="Item">
-       <h1 class="animate__shakeX">View Product Avalibility.</h1>
-     <p>By signing up for a free PitchCS account, you'll gain access to real-time product availability, allowing you to check what’s in stock or sold out before visiting the vending machine. This feature ensures you always know exactly what snacks and drinks are available, saving you time and preventing disappointment. <b>Sign up today</b> to stay updated on your favorite products!.</p>
-<h1 class="animate__shakeX">Earn Points.</h1>
-    <P>Start earning points with every purchase you make. The more you buy, the more points you accumulate, which can be redeemed for discounts on future products or even free items. You’ll also be able to track your points in real-time, making it easy to see how close you are to your next reward. Start saving with every snack!</P>
-        <h1 class="animate__shakeX">Events.</h1>
-        <p>PitchCS will be hosting exciting events where you, as a participating student, could be selected for one of our fun challenges! Join in the excitement and stand a chance to win fantastic prizes while enjoying great snacks. Stay tuned for event announcements and get ready to showcase your skills for a shot at winning!</p>
-  <div class="SnackDashboard">
+
+<div class="Features">
+  <div class="Feature-inner">
+    <div class="Item">
+      <h1 class="animate__shakeX">View Product Availability</h1>
+      <p>By signing up for a free PitchCS account, you'll gain access to real-time product availability, allowing you to check what’s in stock or sold out before visiting the vending machine. This feature ensures you always know exactly what snacks and drinks are available, saving you time and preventing disappointment. <b>Sign up today</b> to stay updated on your favorite products!.</p>
+
+      <h1 class="animate__shakeX">Earn Points</h1>
+      <p>Start earning points with every purchase you make. The more you buy, the more points you accumulate, which can be redeemed for discounts on future products or even free items. You’ll also be able to track your points in real-time, making it easy to see how close you are to your next reward. Start saving with every snack!</p>
+
+      <h1 class="animate__shakeX">Events</h1>
+      <p>PitchCS will be hosting exciting events where you, as a participating student, could be selected for one of our fun challenges! Join in the excitement and stand a chance to win fantastic prizes while enjoying great snacks. Stay tuned for event announcements and get ready 
+to showcase your skills for a shot at winning!</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="SnackDashboard">
   <div class="SnackDashboard-inner">
     <h1 class="animate__flip">Snack Dashboard</h1> <!-- Added animate__flip class here -->
     <p> P1 </p>
-    <p> Pe </p>
-    </div>
+    <p> P2 </p>
+  </div>
 </div>
-</body>
-</html>
+
