--- a/index.html
+++ b/index.html
@@ -1,60 +1,241 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pitch Web</title>
-<link rel="stylesheet" href="custom.css">
+  <meta charset="UTF-8">
+  <title>Network Configuration</title>
+  <style>
+    body {
+      font-family: monospace;
+      background-color: #f4f4f4;
+      padding: 20px;
+      white-space: pre-wrap;
+      border: 1px solid #ccc;
+    }
+    h1 {
+      text-align: center;
+      font-family: sans-serif;
+    }
+    .section-title {
+      background-color: #ddd;
+      padding: 5px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+<h1>Network Configuration Display</h1>
 
-<div class="header">
-   <h1>PitchCS</h1>
+<div class="section-title">Router R1</div>
+enable  
+configure terminal  
+no ip domain lookup  
+hostname R1  
+banner motd #Unauthorized Acess is Prohibited#  
+line console 0  
+password ciscoconpass  
+login  
+exit  
+enable secret ciscoenpass  
+service password-encryption  
+security passwords min-length 10  
+username admin secret admin1pass  
+ip domain name ccna-ptsa.com  
+crypto key generate rsa  
+1024  
+ip ssh version 2  
+line vty 0 15  
+login local  
+transport input ssh  
+exit  
+interface Loopback 0  
+description Loopback  
+ip address 209.165.201.1 255.255.255.224  
+ipv6 address 2001:db8:acad:209::1/64  
+ipv6 address fe80::1 link-local  
+exit  
+ipv6 unicast-routing  
+interface g0/0/1.2  
+encapsulation dot1Q 2  
+description Bikes  
+ip address 10.19.8.1 255.255.255.192  
+ipv6 address 2001:db8:acad:a::1/64  
+ipv6 address fe80::1 link-local  
+interface g0/0/1.3  
+encapsulation dot1Q 3  
+description Trikes  
+ip address 10.19.8.65 255.255.255.224  
+ipv6 address 2001:db8:acad:b::1/64  
+ipv6 address fe80::1 link-local  
+interface g0/0/1.4  
+encapsulation dot1Q 4  
+description Management  
+ip address 10.19.8.97 255.255.255.248  
+ipv6 address 2001:db8:acad:c::1/64  
+ipv6 address fe80::1 link-local  
+interface g0/0/1.6  
+encapsulation dot1Q 6 native  
+description Native  
+interface g0/0/1  
+no shutdown  
+exit  
+ip route 0.0.0.0 0.0.0.0 loopback 0  
+ipv6 route ::/0 loopback 0  
 
-<ul class="C1">
-  <li><a href="#">Log In</a></li>
-  <li><a href="#">Sign In</a></li>
-  <li><a href="#">Social</a></li>
-</ul>
-  
-</div>
+ip dhcp excluded-address 10.19.8.1 10.19.8.52  
+ip dhcp pool CCNA-A  
+network 10.19.8.0 255.255.255.192  
+default-router 10.19.8.1  
+domain-name ccna-a.net  
+exit  
+ip dhcp excluded-address 10.19.8.65 10.19.8.84  
+ip dhcp pool CCNA-B  
+network 10.19.8.64 255.255.255.224  
+default-router 10.19.8.65  
+domain-name ccna-b.net  
+exit  
 
+<div class="section-title">Switch S1</div>
+enable  
+configure terminal  
+no ip domain lookup  
+hostname S1  
+banner motd #Unauthorized Access is Prohibitted!#  
+line console 0  
+password ciscoconpass  
+login  
+exit  
+enable secret ciscoenpass  
+service password-encryption  
+username admin secret admin1pass  
+ip domain name ccna-ptsa.com  
+crypto key generate rsa  
+1024  
+ip ssh version 2  
+line vty 0 15  
+login local  
+transport input ssh  
+exit  
+interface vlan 4  
+ip address 10.19.8.98 255.255.255.248  
+description Management Interface  
+no shutdown  
+exit  
+ip default-gateway 10.19.8.97  
+vlan 2  
+name Bikes  
+vlan 3  
+name Trikes  
+vlan 4  
+name Management  
+vlan 5  
+name Parking  
+vlan 6  
+name Native  
+interface range f0/1-2  
+switchport mode trunk  
+switchport trunk native vlan 6  
+switchport trunk allowed vlan 2,3,4,5,6  
+exit  
+interface f0/5  
+switchport mode trunk  
+switchport trunk native vlan 6  
+switchport trunk allowed vlan 2,3,4,5,6  
+exit  
+interface range f0/1-2  
+channel-group 1 mode active  
+interface port-channel 1  
+exit  
+interface f0/6  
+description host  
+switchport mode access  
+switchport access vlan 2  
+switchport port-security  
+switchport port-security maximum 3  
+interface range f0/3-4, f0/7-24, g0/1-2  
+switchport mode access  
+switchport access vlan 5  
+description Unused Interfaces  
+shutdown  
 
-<div Class="C2">
- <div Class="C2-inner">
-   <h1>Welcome To The PitchWeb ! !</h1>
-    <p>We’re excited to have you here. At PitchCS, we aim to make your experience convenient, providing quick access to your favorite products right on campus. Whether you're grabbing a snack, refreshing with a drink, or simply looking for a break, our vending machines are here for you.</p>
-   
-   
-<a href="#" Class="Button">Learn More</a>
- </div>
-</div>
+<div class="section-title">Switch S2</div>
+enable  
+configure terminal  
+no ip domain lookup  
+hostname S2  
+banner motd #Unauthorized Access is Prohibitted!#  
+line console 0  
+password ciscoconpass  
+login  
+exit  
+enable secret ciscoenpass  
+service password-encryption  
+username admin secret admin1pass  
+ip domain name ccna-ptsa.com  
+crypto key generate rsa  
+1024  
+ip ssh version 2  
+line vty 0 15  
+login local  
+transport input ssh  
+exit  
+interface vlan 4  
+ip address 10.19.8.99 255.255.255.248  
+description Management Interface  
+no shutdown  
+exit  
+ip default-gateway 10.19.8.97  
+vlan 2  
+name Bikes  
+vlan 3  
+name Trikes  
+vlan 4  
+name Management  
+vlan 5  
+name Parking  
+vlan 6  
+name Native  
+interface range f0/1-2  
+switchport mode trunk  
+switchport trunk native vlan 6  
+switchport trunk allowed vlan 2,3,4,5,6  
+exit  
+interface range f0/1-2  
+channel-group 1 mode active  
+interface port-channel 1  
+exit  
+interface f0/18  
+switchport mode access  
+switchport access vlan 3  
+switchport port-security  
+switchport port-security maximum 3  
+interface range f0/3-17, f0/19-24, g0/1-2  
+switchport mode access  
+switchport access vlan 5  
+description Unused Interfaces  
+shutdown  
 
+<div class="section-title">Cabling & Hosts</div>
+Straight-through copper  
+R1 G0/0/1 >> S1 F0/6  
 
-<div class="Features">
-  <div class="Feature-inner">
-    <div class="Item">
-      <h1 class="animate__shakeX">View Product Availability</h1>
-      <p>By signing up for a free PitchCS account, you'll gain access to real-time product availability, allowing you to check what’s in stock or sold out before visiting the vending machine. This feature ensures you always know exactly what snacks and drinks are available, saving you time and preventing disappointment. <b>Sign up today</b> to stay updated on your favorite products!.</p>
+Straight-through copper  
+S1 F0/1 >> S2 F0/3  
+S1 F0/2 >> S2 F0/2  
 
-      <h1 class="animate__shakeX">Earn Points</h1>
-      <p>Start earning points with every purchase you make. The more you buy, the more points you accumulate, which can be redeemed for discounts on future products or even free items. You’ll also be able to track your points in real-time, making it easy to see how close you are to your next reward. Start saving with every snack!</p>
+S1 F0/6 >> PCA = FE  
+S2 F0/11 >> PCB = FE  
 
-      <h1 class="animate__shakeX">Events</h1>
-      <p>PitchCS will be hosting exciting events where you, as a participating student, could be selected for one of our fun challenges! Join in the excitement and stand a chance to win fantastic prizes while enjoying great snacks. Stay tuned for event announcements and get ready 
-to showcase your skills for a shot at winning!</p>
-    </div>
-  </div>
-</div>
+Consoles  
+PCA = RS >> R1 consoles  
+PCA = RS >> S1 then S2 consoles  
 
+<div class="section-title">Turn on Devices / DHCP Info</div>
+TURN …DHCP  
+2001:DB8:ACAD:A::50  
+FE80::2D0:D3FF:FE37:2114  
+FE80::2D0:D3FF:FF49:E4E0  
+FE80::1  
 
-<div class="SnackDashboard">
-  <div class="SnackDashboard-inner">
-    <h1 class="animate__flip">Snack Dashboard</h1> <!-- Added animate__flip class here -->
-    <p> P1 </p>
-    <p> P2 </p>
-  </div>
-</div>
+</body>
+</html>
