--- a/index.html
+++ b/index.html
@@ -2,240 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Network Configuration</title>
-  <style>
-    body {
-      font-family: monospace;
-      background-color: #f4f4f4;
-      padding: 20px;
-      white-space: pre-wrap;
-      border: 1px solid #ccc;
-    }
-    h1 {
-      text-align: center;
-      font-family: sans-serif;
-    }
-    .section-title {
-      background-color: #ddd;
-      padding: 5px;
-      font-weight: bold;
-    }
-  </style>
+  <title>myUNISA – Examination Results</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
+  <header class="header">
+    <div class="logo">
+      <span>my</span>UNISA
+    </div>
+    <nav class="nav">
+      <button class="btn">myModules</button>
+      <button class="btn orange">myAdmin</button>
+    </nav>
+    <div class="user-dropdown">LEBOGO, NEO</div>
+  </header>
 
-<h1>Network Configuration Display</h1>
+  <!-- Submenu Navigation -->
+  <nav class="submenu">
+    <ul>
+      <li><a href="#">myAdmin</a></li>
+      <li><a href="#">Student Admin ▼</a></li>
+      <li><a href="#">Study Material ▼</a></li>
+      <li><a href="#">Student Finance ▼</a></li>
+      <li><a href="#">Assessment Admin ▼</a></li>
+      <li><a href="#">Teaching Practice ▼</a></li>
+      <li><a href="#">Password Management ▼</a></li>
+    </ul>
+  </nav>
 
-<div class="section-title">Router R1</div>
-enable  
-configure terminal  
-no ip domain lookup  
-hostname R1  
-banner motd #Unauthorized Acess is Prohibited#  
-line console 0  
-password ciscoconpass  
-login  
-exit  
-enable secret ciscoenpass  
-service password-encryption  
-security passwords min-length 10  
-username admin secret admin1pass  
-ip domain name ccna-ptsa.com  
-crypto key generate rsa  
-1024  
-ip ssh version 2  
-line vty 0 15  
-login local  
-transport input ssh  
-exit  
-interface Loopback 0  
-description Loopback  
-ip address 209.165.201.1 255.255.255.224  
-ipv6 address 2001:db8:acad:209::1/64  
-ipv6 address fe80::1 link-local  
-exit  
-ipv6 unicast-routing  
-interface g0/0/1.2  
-encapsulation dot1Q 2  
-description Bikes  
-ip address 10.19.8.1 255.255.255.192  
-ipv6 address 2001:db8:acad:a::1/64  
-ipv6 address fe80::1 link-local  
-interface g0/0/1.3  
-encapsulation dot1Q 3  
-description Trikes  
-ip address 10.19.8.65 255.255.255.224  
-ipv6 address 2001:db8:acad:b::1/64  
-ipv6 address fe80::1 link-local  
-interface g0/0/1.4  
-encapsulation dot1Q 4  
-description Management  
-ip address 10.19.8.97 255.255.255.248  
-ipv6 address 2001:db8:acad:c::1/64  
-ipv6 address fe80::1 link-local  
-interface g0/0/1.6  
-encapsulation dot1Q 6 native  
-description Native  
-interface g0/0/1  
-no shutdown  
-exit  
-ip route 0.0.0.0 0.0.0.0 loopback 0  
-ipv6 route ::/0 loopback 0  
+  <!-- Breadcrumb -->
+  <div class="breadcrumb">
+    Home / <strong>myAdmin</strong>
+  </div>
 
-ip dhcp excluded-address 10.19.8.1 10.19.8.52  
-ip dhcp pool CCNA-A  
-network 10.19.8.0 255.255.255.192  
-default-router 10.19.8.1  
-domain-name ccna-a.net  
-exit  
-ip dhcp excluded-address 10.19.8.65 10.19.8.84  
-ip dhcp pool CCNA-B  
-network 10.19.8.64 255.255.255.224  
-default-router 10.19.8.65  
-domain-name ccna-b.net  
-exit  
+  <!-- Main Content -->
+  <main class="container">
+    <h2>Examination Results</h2>
+    <form class="form">
+      <label>Exam Year *</label>
+      <input type="text" value="2025" required>
 
-<div class="section-title">Switch S1</div>
-enable  
-configure terminal  
-no ip domain lookup  
-hostname S1  
-banner motd #Unauthorized Access is Prohibitted!#  
-line console 0  
-password ciscoconpass  
-login  
-exit  
-enable secret ciscoenpass  
-service password-encryption  
-username admin secret admin1pass  
-ip domain name ccna-ptsa.com  
-crypto key generate rsa  
-1024  
-ip ssh version 2  
-line vty 0 15  
-login local  
-transport input ssh  
-exit  
-interface vlan 4  
-ip address 10.19.8.98 255.255.255.248  
-description Management Interface  
-no shutdown  
-exit  
-ip default-gateway 10.19.8.97  
-vlan 2  
-name Bikes  
-vlan 3  
-name Trikes  
-vlan 4  
-name Management  
-vlan 5  
-name Parking  
-vlan 6  
-name Native  
-interface range f0/1-2  
-switchport mode trunk  
-switchport trunk native vlan 6  
-switchport trunk allowed vlan 2,3,4,5,6  
-exit  
-interface f0/5  
-switchport mode trunk  
-switchport trunk native vlan 6  
-switchport trunk allowed vlan 2,3,4,5,6  
-exit  
-interface range f0/1-2  
-channel-group 1 mode active  
-interface port-channel 1  
-exit  
-interface f0/6  
-description host  
-switchport mode access  
-switchport access vlan 2  
-switchport port-security  
-switchport port-security maximum 3  
-interface range f0/3-4, f0/7-24, g0/1-2  
-switchport mode access  
-switchport access vlan 5  
-description Unused Interfaces  
-shutdown  
+      <label>Examination Period *</label>
+      <select>
+        <option>May/June</option>
+        <option>October/November</option>
+      </select>
 
-<div class="section-title">Switch S2</div>
-enable  
-configure terminal  
-no ip domain lookup  
-hostname S2  
-banner motd #Unauthorized Access is Prohibitted!#  
-line console 0  
-password ciscoconpass  
-login  
-exit  
-enable secret ciscoenpass  
-service password-encryption  
-username admin secret admin1pass  
-ip domain name ccna-ptsa.com  
-crypto key generate rsa  
-1024  
-ip ssh version 2  
-line vty 0 15  
-login local  
-transport input ssh  
-exit  
-interface vlan 4  
-ip address 10.19.8.99 255.255.255.248  
-description Management Interface  
-no shutdown  
-exit  
-ip default-gateway 10.19.8.97  
-vlan 2  
-name Bikes  
-vlan 3  
-name Trikes  
-vlan 4  
-name Management  
-vlan 5  
-name Parking  
-vlan 6  
-name Native  
-interface range f0/1-2  
-switchport mode trunk  
-switchport trunk native vlan 6  
-switchport trunk allowed vlan 2,3,4,5,6  
-exit  
-interface range f0/1-2  
-channel-group 1 mode active  
-interface port-channel 1  
-exit  
-interface f0/18  
-switchport mode access  
-switchport access vlan 3  
-switchport port-security  
-switchport port-security maximum 3  
-interface range f0/3-17, f0/19-24, g0/1-2  
-switchport mode access  
-switchport access vlan 5  
-description Unused Interfaces  
-shutdown  
+      <div class="buttons">
+        <button type="button" class="btn grey">Display</button>
+        <button type="button" class="btn grey">Apply for Exam Script Remark</button>
+      </div>
+    </form>
 
-<div class="section-title">Cabling & Hosts</div>
-Straight-through copper  
-R1 G0/0/1 >> S1 F0/6  
-
-Straight-through copper  
-S1 F0/1 >> S2 F0/3  
-S1 F0/2 >> S2 F0/2  
-
-S1 F0/6 >> PCA = FE  
-S2 F0/11 >> PCB = FE  
-
-Consoles  
-PCA = RS >> R1 consoles  
-PCA = RS >> S1 then S2 consoles  
-
-<div class="section-title">Turn on Devices / DHCP Info</div>
-TURN …DHCP  
-2001:DB8:ACAD:A::50  
-FE80::2D0:D3FF:FE37:2114  
-FE80::2D0:D3FF:FF49:E4E0  
-FE80::1  
-
+    <section class="results">
+      <h3>Results for 29077974 extracted on 2025-08-07 19:06</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Course</th>
+            <th>Final Mark</th>
+            <th>Result</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a href="#">AUE1501</a></td>
+            <td>70</td>
+            <td>Passed</td>
+          </tr>
+          <tr>
+            <td><a href="#">PUB1501</a></td>
+            <td>59</td>
+            <td>Passed</td>
+          </tr>
+          <tr>
+            <td><a href="#">PUB1502</a></td>
+            <td>69</td>
+            <td>Passed</td>
+          </tr>
+          <tr>
+            <td><a href="#">PUB1503</a></td>
+            <td>79</td>
+            <td>Passed</td>
+          </tr>
+          <tr>
+            <td><a href="#">PUB1504</a></td>
+            <td>67</td>
+            <td>Passed</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
 </body>
 </html>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-section left">
+      <p>University of South Africa<br>
+         P O Box 392<br>
+         Unisa<br>
+         0003</p>
+    </div>
+    <div class="footer-section center">
+      <p>Terms & Conditions<br>
+         Copyright<br>
+         University of South Africa</p>
+    </div>
+   
+  </footer>
